# ECB-Currency-Exchange-Rate

./: LICENSE  Readme.md  pyproject.toml  setup.py
ecb_rates/: ecb_rates.py
