[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecb-currency-exchange-rates"
version = "0.1.0"
authors = [
    { name="Odessa Ren", email="odessa.ren@hotmail.com" }
]
description = "Fetch and process historical daily currency exchange rates from the ECB"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "requests",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/OdessaR/ecb-currency-exchange-rates"
Repository = "https://github.com/OdessaR/ecb-currency-exchange-rates"
